--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,15 @@
 .DS_Store
 
 
-*/target
+dist/*
+*/target/*
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
 *.class
 
 *.iml
