--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,15 @@
 .DS_Store
 
 
-dist/*
+*/dist/*
 */target/*
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-.history
-.cache
-.lib/
+*/lib_managed/
+*/src_managed/
+*/project/boot/
+*/project/plugins/project/
+*/.history
+*/.cache
+*/.lib/
 *.class
 
 *.iml
